--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 
 # production
 /build
-
+.
 # misc
 .DS_Store
 .env.local
@@ -23,3 +23,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode/settings.json
