--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node-sass": "^4.11.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^9.0.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase": "^9.15.0",
