--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://dordos.github.io/retflx",
-  "name": "dinema",
+  "name": "retflx",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
