--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase": "^9.15.0",
+    "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -30,8 +31,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "CI= npm run build"
